--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
+    "expo-location": "~17.0.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -31,12 +32,14 @@
     "react-native": "0.74.5",
     "react-native-floating-action": "^1.22.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-maps": "^1.20.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
