--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/react": "~18.2.45",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint-plugin-testing-library": "^7.1.1",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
